=====================================
   m l U n i t   C H A N G E L O G
=====================================

mlUnit 1.6.5 (2013-11-19)
-------------------------

  - Refactored implementation of assert_(not_)equals(_withequalnans).
  - Absolute tolerance for equalling distinct differences now in place for all
    assert_(not_)equals(_withequalnans) functions.
  - Equality tolerance can be checked with NaN value matrices as well.
  - NaN equality is now an mlUnit parameter named equal_nans, eliminating
    functions named assert_(not_)equals_withequalnans. [F#13]

  - Fix: eps comparison for vectors yields undetermined results
  - Fix: eps comparison fails for vectors of incompatible types, e.g. double and
    uint8. Changed assert_equals to compare eps only for equal numeric types.
  - Fix: Rerunning a testcase from the mlUnit GUI does not update the test's
    implementation. [B#22]
  - Fix: assert_error fails on R2007b and later. [B#21]
  - Fix: normal assertion strings get sprintf evaluated.

  [F#13] https://sourceforge.net/p/mlunit/feature-requests/13/
  [B#21] https://sourceforge.net/p/mlunit/bugs/21/
  [B#22] https://sourceforge.net/p/mlunit/bugs/22/


mlUnit 1.6.4 (2013-05-27)
-------------------------

  - Removed install.m script. Content not needed, since assert can not get
    shadowed anymore.
  - assert_true and assert_false may be called without arguments, in which case
    they pass or fail respectively.
  - assert_equals and assert_equals_withequalnans can receive an absolute
    tolerance to handle slight differences equally.
  - assert_warning checks for a specific warning when executing a function.
  - Updated m2html documentation.

  - Fix: license strings
  - Fix: stack trace filter for assert functions did not include newer
    assert wrappers
  - Fix: Failed on missing subclass argument.
  - Fix: gui_test_runner failed on a callback invocation with empty handles for
    MATLAB R2008b. Reported as [#15].